--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/jepthoniq/lMl10l/",
+  "repository": "https://github.com/picthon/teest/tree/main",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
