--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "سورس بيكثون المجاني | Source AL-Joker Free",
+  "name": "سورس بيكثون المجاني | Source PicThon Free",
   "description": "اللهم صلِ على محمد وآل محمد",
   "logo": "https://telegra.ph/file/42551478a0ed475686482.jpg",
   "keywords": [
